# ha-hauskosten

./: .codacy.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hacs.json  info.md  pyproject.toml
.chglog/: CHANGELOG.tpl.md  RELEASE.tpl.md  config.yml  release-config.yml
.claude/agents/: config-flow-dev.md  coordinator-dev.md  distribution-logic.md  docs-writer.md  integration-architect.md  release-manager.md  sensor-dev.md  test-writer.md
.claude/commands/: new-feature.md  prepare-release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  security-scan.yml  stale.yml  test.yml  validate.yml
custom_components/hauskosten/: __init__.py  calculations.py  config_flow.py  const.py  coordinator.py  distribution.py  manifest.json  models.py  sensor.py  services.py  services.yaml  storage.py  strings.json
custom_components/hauskosten/translations/: de.json  en.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  DISTRIBUTION.md  ONBOARDING.md  STANDARDS.md  STANDARDS_ADAPTATION.md
tests/: __init__.py  conftest.py  test_calculations.py  test_config_flow.py  test_coordinator.py  test_distribution.py  test_init.py  test_models.py  test_package.py  test_sensor.py  test_storage.py
